# AI-Human

./: Dockerfile  README.md  environment.py  inference.py  openenv.yaml  output.txt  pyproject.toml
server/: app.py
